tests/cases/fail/unit_struct.rs
// SPDX-FileCopyrightText: 2025-2026 RAprogramm <andrey.rozanov.vl@gmail.com>
// SPDX-License-Identifier: MIT

use entity_derive::Entity;

#[derive(Entity)]
#[entity(table = "empty")]
pub struct Empty;

fn main() {}
