tests/cases/fail/unit_struct.stderr
error: Unsupported shape `no fields`. Expected named fields.
 --> tests/cases/fail/unit_struct.rs:6:10
  |
6 | #[derive(Entity)]
  |          ^^^^^^
  |
  = note: this error originates in the derive macro `Entity` (in Nightly builds, run with -Z macro-backtrace for more info)
